[package]
name = "lime"
description = "Game engine with vulkano."
version = "0.0.0"
repository = "https://github.com/andrewhickman/lime"
documentation = "https://docs.rs/lime/"
license = "MIT/Apache-2.0"
readme = "README.md"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]

[workspace]
members = ["lime-main-loop", "lime-render", "lime-ui"]

[dependencies]
lime-main-loop = { path = "lime-main-loop", version = "0.1.0" }
lime-render = { path = "lime-render", version = "0.1.0" }
lime-ui = { path = "lime-ui", version = "0.1.0" }