[package]
name = "lime-main-loop"
description = "Main loop."
version = "0.1.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/lime"
documentation = "https://docs.rs/lime-main-loop/"
license = "MIT/Apache-2.0"

[dependencies]
failure = "0.1.1"
log = "0.4.1"
winit = "0.11.0"