[package]
name = "lime-render"
description = "Renderer."
version = "0.1.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/lime"
documentation = "https://docs.rs/lime-render/"
license = "MIT/Apache-2.0"

[dependencies]
failure = "0.1.1"
log = "0.4.1"
specs = "=0.11.0-alpha5"
vulkano = "0.9.0"
vulkano-shader-derive = "0.9.0"
vulkano-win = "0.9.0"
winit = "0.11.0"