[package]
name = "lime-render"
description = "Renderer."
version = "0.1.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/lime"
documentation = "https://docs.rs/lime-render/"
license = "MIT/Apache-2.0"

[dependencies]
approx = "0.2.0"
failure = "0.1.1"
log = "0.4.1"
lime-utils = { path = "../lime-utils", version = "0.1.0" }
serde = "1.0.66"
serde_derive = "1.0.66"
specs = "0.12.0"
shrev = "1.0.1"
vulkano = { git = "https://github.com/andrewhickman/vulkano/" }
vulkano-shader-derive = { git = "https://github.com/andrewhickman/vulkano/" }
vulkano-win = { git = "https://github.com/andrewhickman/vulkano/" }
winit = "0.16.2"

[dev-dependencies]
env_logger = "0.5.10"