[package]
name = "lime-render"
description = "Renderer."
version = "0.1.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/lime"
documentation = "https://docs.rs/lime-render/"
license = "MIT/Apache-2.0"

[dependencies]
approx = "0.2.0"
failure = "0.1.2"
log = "0.4.1"
lime-utils = { path = "../lime-utils", version = "0.1.0" }
serde = "1.0.66"
serde_derive = "1.0.66"
specs = "0.12.0"
shrev = "1.0.1"
vulkano = "0.10.0"
vulkano-shader-derive = "0.10.0"
vulkano-win = "0.10.0"
winit = "0.17.1"

[dev-dependencies]
env_logger = "0.5.10"
image = "0.19.0"