[package]
name = "lime-ui"
description = "UI."
version = "0.1.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/lime"
documentation = "https://docs.rs/lime-ui/"
license = "MIT/Apache-2.0"

[dependencies]
cassowary = "0.3.0"
fnv = "1"
hibitset = "0.5.0"
lime-render = { path = "../lime-render", version = "0.1.0" }
lime-utils = { path = "../lime-utils", version = "0.1.0" }
log = "0.4.1"
shrev = "1.0.1"
specs = "0.11.2"
winit = "0.11.0"

[dev-dependencies]
approx = "0.2.0"
env_logger = "0.5.10"