[package]
name = "lime-ui"
description = "UI."
version = "0.1.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/lime"
documentation = "https://docs.rs/lime-ui/"
license = "MIT/Apache-2.0"

[dependencies]
bitflags = "1.0.3"
cassowary = { git = "https://github.com/dylanede/cassowary-rs" } 
erased-serde = "0.3.3"
fnv = "1"
hibitset = "0.5.0"
lime-render = { path = "../lime-render", version = "0.1.0" }
lime-utils = { path = "../lime-utils", version = "0.1.0" }
log = "0.4.1"
serde = "1.0.66"
serde_derive = "1.0.66"
shrev = "1.0.1"
specs = "0.12.0"
specs-derive = "0.2.0"
specs-mirror = "0.5.0"
winit = "0.16.2"

[dev-dependencies]
approx = "0.2.0"
env_logger = "0.5.10"
serde_json = "1.0.20"